Small performance optimization