@@ -142,8 +142,7 @@ public class SourceView extends FoldablePlainView implements ThreadedParserFacad
 
 			// Draw tail
 			int end = Math.min(scope.getEnd(), line.getLength());
-			int start = scope.getChildren().get(scope.getChildren().size() - 1)
-					.getEnd();
+			int start = scope.getChildren().getLast().getEnd();
 
 			if (end > start) {
 				int f = Math.max(start, s);
